--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
       </tr>
     </thead>
     <tbody>
-
+      <tr>
+        <td>Luz</td>
+        <td>- R$ 500,00</td>
+        <td>23/01/2021</td>
+      </tr>
+      <tr>
+        <td>Criação website</td>
+        <td>R$ 5.000,00</td>
+        <td>23/01/2021</td>
+      </tr>
+      <tr>
+        <td>Internet</td>
+        <td>- R$ 200,00</td>
+        <td>23/01/2021</td>
+      </tr>
     </tbody>
   </table>
 
